--- a/less/less.man
+++ b/less/less.man
@@ -17,14 +17,13 @@
        names.)
 
 [1mDESCRIPTION[0m
-       [1mLess [22mis a program similar to [1mmore[22m(1), but which allows  backward  move‐
-       ment in the file as well as forward movement.  Also, [1mless [22mdoes not have
-       to  read  the  entire  input  file before starting, so with large input
-       files it starts up faster than text  editors  like  [1mvi[22m(1).   [1mLess  [22muses
-       termcap  (or  terminfo  on some systems), so it can run on a variety of
-       terminals.  There is even limited support for hardcopy terminals.   (On
-       a  hardcopy  terminal,  lines which should be printed at the top of the
-       screen are prefixed with a caret.)
+       [1mLess [22mis a program similar to [1mmore[22m(1), but it has  many  more  features.
+       [1mLess  [22mdoes  not  have to read the entire input file before starting, so
+       with large input files it starts  up  faster  than  text  editors  like
+       [1mvi[22m(1).   [1mLess [22muses termcap (or terminfo on some systems), so it can run
+       on a variety of terminals.  There is even limited support for  hardcopy
+       terminals.   (On  a hardcopy terminal, lines which should be printed at
+       the top of the screen are prefixed with a caret.)
 
        Commands are based on both [1mmore [22mand [1mvi[22m.  Commands may be preceded by  a
        decimal number, called N in the descriptions below.  The number is used
@@ -2342,4 +2341,4 @@
        For more information, see the less homepage at
        https://greenwoodsoftware.com/less.
 
-                           Version 653: 20 Mar 2024                    [4mLESS[24m(1)
+                           Version 654: 28 Apr 2024                    [4mLESS[24m(1)
